--- a/KGERP/Views/BillRequisition/PMBRRejectSlave.cshtml
+++ b/KGERP/Views/BillRequisition/PMBRRejectSlave.cshtml
@@ -124,7 +124,7 @@
                                                         @Html.HiddenFor(model => model.DetailDataList[i].BillRequisitionMasterId)
                                                         @(++sl)
                                                     </td>
-                                                    <td style="padding:5px;text-align:left;">@item.ItemName</td>
+                                                    <td style="padding:5px;text-align:left;">@item.ProductName</td>
                                                     <td style="padding: 5px; text-align: left;">@item.UnitName</td>
                                                     <td style="padding:5px;text-align:right;">@String.Format("{0:0.00}", item.EstimatedQty)</td>
                                                     <td style="padding: 5px; text-align: right;">@String.Format("{0:0.00}", item.ReceivedSoFar)</td>
